--- a/css/media-576.css
+++ b/css/media-576.css
@@ -1,4 +1,18 @@
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 576px) {
+  .container {
+    width: 1024px;
+    margin: 150px 0 0 0;
+  }
+
+  .header-block {
+    position: fixed;
+    padding: 40px;
+    background-image: url(../img/header.jpg);
+    background-size: cover;
+    z-index: 999;
+    margin: -150px 0 0 0;
+  }
+
   .header-carousel {
     display: none;
   }
@@ -296,7 +310,450 @@
   }
 
   .screenshot,
-  .advertising {
+  .advertising,
+  .wrap-video {
     display: none;
+  }
+
+  .products-h2 {
+    height: 28px;
+    font-family: "raleway semibold", "open sans semibold", sans-serif;
+    font-size: 40px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: #555555;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 37px;
+  }
+
+  .products-p {
+    width: 100%;
+    font-family: "montserrat light", verdana, sans-serif;
+    font-size: 21px;
+    margin: 0 auto;
+    font-weight: 300;
+    line-height: 1.75;
+    text-align: center;
+    color: #8c8c8c;
+  }
+
+  .products-list {
+    width: 100%;
+    max-width: 576px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin: 0 auto;
+  }
+
+  .products-list-block {
+    width: 80%;
+    margin: 0 0 17px 0;
+  }
+
+  .products-list-img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: #ccc;
+  }
+
+  .products-txt-wrp {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background-color: #fbfaf8;
+    padding: 13px 0 37px 30px;
+    position: relative;
+  }
+
+  .products-txt-wrp::before {
+    content: "";
+    border: 10px solid transparent;
+    border-bottom: 10px solid #fbfaf8;
+    position: absolute;
+    top: -20px;
+    left: 19px;
+  }
+
+  .products-list-block-txt1 {
+    height: 15px;
+    display: block;
+    font-family: "raleway medium", verdana medium, sans-serif;
+    font-size: 28px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #c7b299;
+  }
+
+  .products-list-block-txt2 {
+    height: 14px;
+    display: block;
+    font-family: "montserrat light", verdana, sans-serif;
+    font-size: 23px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.43;
+    letter-spacing: normal;
+    text-align: left;
+    color: #d1d1d1;
+    padding-top: 20px;
+  }
+
+  .products-list-btn1 {
+    left: 137px;
+  }
+
+  .products-list-btn2 {
+    left: 250px;
+  }
+
+  .products-list-block:hover .products-list-btn1 {
+    display: block;
+    outline: none;
+    transform: scale(2);
+  }
+
+  .products-list-block:hover .products-list-btn2 {
+    display: block;
+    outline: none;
+    transform: scale(2);
+  }
+
+  .btn-load-more {
+    width: 200px;
+    height: 64px;
+    margin: 26px 0 35px 369px;
+    padding: 13px 22px 10px 22px;
+    min-height: 32px;
+    border: none;
+    border-radius: 3px;
+    border: solid 1px #ebebeb;
+    font-family: "raleway extrabold", "open sans extrabold", sans-serif;
+    font-size: 22px;
+    font-weight: 800;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.64;
+    letter-spacing: normal;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    -webkit-box-shadow: inset 0px -3px 0 0 #736357;
+    box-shadow: inset 0px -3px 0 0 #736357;
+    background-color: #998675;
+  }
+
+  .mobile-txt {
+    margin: 49px 20px 0 33px;
+  }
+
+  .mobile-h2 {
+    font-size: 40px;
+  }
+
+  .mobile-p {
+    width: 570px;
+    font-size: 18px;
+  }
+
+  .mobile-list {
+    font-size: 18px;
+  }
+
+  .recent-posts-h2 {
+    font-size: 40px;
+  }
+
+  .recent-posts-p {
+    min-width: 994px;
+    font-size: 21px;
+  }
+
+  .reset-post-wrp {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+  }
+
+  .recent-posts-box {
+    width: 600px;
+    min-height: 422px;
+    outline: solid 1px #f8f8f8;
+    margin: 0 15px 15px 15px;
+  }
+
+  .recent-posts-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  .calendar {
+    position: absolute;
+    margin: -334px 0 0 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+
+  .date {
+    width: 29px;
+    min-height: 17px;
+    font-family: "montserrat light", verdana, sans-serif;
+    font-size: 40px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 0.83;
+    letter-spacing: normal;
+    text-align: center;
+    color: #ffffff;
+    padding: 16px 35px 16px 20px;
+    background-color: #363636;
+    -moz-border-radius-topleft: 4px;
+    -webkit-border-top-left-radius: 4px;
+    border-top-left-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -webkit-border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+
+  .month {
+    font-family: "roboto-regular", verdana, sans-serif;
+    font-size: 21px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.67;
+    letter-spacing: normal;
+    text-align: center;
+    color: #ffffff;
+    padding: 8px 30px 7px 31px;
+    background-color: #252525;
+    -moz-border-radius-bottomright: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+
+  .recent-pagination {
+    position: absolute;
+    width: 123px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin: -24px 0 23px 246px;
+  }
+
+  .recent-pagination-img {
+    display: block;
+    width: 15px;
+    height: 15px;
+    opacity: 0.5;
+    background-color: #ffffff;
+    border-radius: 50%;
+    border: 2px solid transparent;
+  }
+
+  .recent-posts-title {
+    font-size: 30px;
+  }
+
+  .recent-posts-txt {
+    font-size: 21px;
+  }
+
+  .recent-posts-a {
+    font-size: 25px;
+  }
+
+  .recent-posts-a::after {
+    content: "";
+    display: block;
+    position: absolute;
+    display: block;
+    float: left;
+    border: 10px solid transparent;
+    border-left: 14px solid #c7b299;
+    margin: -26px 0 0 150px;
+  }
+
+  .recent-posts-box:hover .recent-posts-a::after {
+    content: "";
+    display: block;
+    position: absolute;
+    display: block;
+    float: left;
+    border: 10px solid transparent;
+    border-left: 14px solid #c7b299;
+    margin: -26px 0 0 150px;
+  }
+
+  .recent-posts-btn {
+    fill: #d1d1d1;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    transform: scale(3);
+    margin: 0 80px 0 80px;
+  }
+
+  .products-btn-item {
+    font-size: 25px;
+  }
+
+  .options-block1 {
+    width: 500px;
+    padding: 5px 10px 10px 10px;
+  }
+
+  .options-block {
+    width: 500px;
+    padding: 15px 10px 0 10px;
+  }
+
+  .options-block-h2 {
+    font-size: 30px;
+  }
+
+  .options-block-txt {
+    font-size: 21px;
+    line-height: 33px;
+  }
+  .options-block1:after {
+    width: 100px;
+    height: 8px;
+  }
+
+  .options-block:after {
+    width: 100px;
+    height: 8px;
+  }
+  .footer1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .about {
+    width: 500px;
+    display: block;
+    margin: 0 20px 0 20px;
+  }
+  .footer-txt {
+    width: 190%;
+    font-size: 20px;
+    display: block;
+  }
+
+  .about-link {
+    margin: 18px 0 40px 0;
+    font-size: 16px;
+  }
+
+  .about-link:after {
+    content: " border-left: 8px solid #00bff3";
+    transition: 500ms;
+    display: block;
+    position: absolute;
+    display: block;
+    float: left;
+    border: 6px solid transparent;
+    border-left: 11px solid #00bff3;
+    margin: -17px 0 0 100px;
+    display: none;
+  }
+
+  .footer-h2 {
+    font-size: 30px;
+  }
+
+  .footer-recent-posts,
+  .twitter {
+    display: none;
+  }
+
+  .widget-h2 {
+    font-size: 35px;
+  }
+  .widget {
+    width: 100%;
+  }
+
+  .footer2 {
+    height: 150px;
+    background-color: #111111;
+    color: #555555;
+    font-family: "montserrat light", verdana, sans-serif;
+    font-size: 19px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.54;
+    letter-spacing: normal;
+    padding: 0 20px 0 20px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+
+  .policy::after {
+    content: " ";
+    background: #555555;
+    width: 1px;
+    height: 20px;
+    float: right;
+    margin: 13px 10px 0 10px;
+  }
+
+  .copy::after {
+    height: 20px;
+    float: right;
+    margin: 13px 10px 0 10px;
+  }
+
+  .faq::after {
+    height: 20px;
+    float: right;
+    margin: 13px 10px 0 10px;
+  }
+
+  .designed::after {
+    height: 20px;
+    float: right;
+    margin: 13px 10px 0 10px;
   }
 }
