--- a/css/media-768.css
+++ b/css/media-768.css
@@ -1,4 +1,18 @@
 @media screen and (max-width: 768px) {
+  .container {
+    width: 1024px;
+    margin: 150px 0 0 0;
+  }
+
+  .header-block {
+    position: fixed;
+    padding: 40px;
+    background-image: url(../img/header.jpg);
+    background-size: cover;
+    z-index: 999;
+    margin: -150px 0 0 0;
+  }
+
   .header-carousel {
     display: none;
   }
