--- a/css/media-1024.css
+++ b/css/media-1024.css
@@ -1012,7 +1012,7 @@
 
   .progress {
     width: 1024px;
-    min-height: 300px;
+    height: 300px;
     background-image: -webkit-gradient(
       linear,
       left bottom,
