--- a/css/media-320.css
+++ b/css/media-320.css
@@ -1,17 +1,52 @@
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 420px) {
   .container {
-    width: 576px;
+    width: 320px;
     margin: 150px 0 0 0;
   }
 
   .header-block {
     position: fixed;
-    width: 576px;
-    padding: 40px;
+    width: 320px;
+    padding: 20px 10px 20px 10px;
     background-image: url(../img/header.jpg);
     background-size: cover;
     z-index: 999;
     margin: -150px 0 0 0;
+  }
+
+  .logo {
+    transform: scale(0.8);
+  }
+
+  .logo-txt {
+    font-family: "raleway", "open sans", sans-serif;
+    font-size: 26px;
+    font-weight: 400;
+    color: #ffffff;
+    display: block;
+    margin-left: -10px;
+    margin-top: 14px;
+    padding: 0 0 0 0;
+  }
+
+  .mobile-menu {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0px 12px;
+    top: 0;
+    left: 0px;
+    right: -46px;
+    height: 0px;
+    z-index: 999;
+  }
+
+  .mobile-menu-checkbox:checked ~ .mobile-menu-container {
+    height: 573px;
+    transition-delay: 0s;
+    top: 0;
+    left: -27px;
   }
 
   .menu-ul-li {
@@ -23,7 +58,7 @@
   }
 
   .options {
-    width: 576px;
+    width: 320px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -43,8 +78,8 @@
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    width: 470px;
-    padding: 0 10px 15px 10px;
+    width: 300px;
+    padding: 0px 10px 15px 10px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
@@ -58,42 +93,24 @@
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    width: 470px;
+    width: 300px;
     padding: 10px 10px 15px 10px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
 
-  .options-block-txt {
-    font-family: "montserrat light", "verdana", sans-serif;
-    font-size: 18px;
-    line-height: 28px;
-    font-weight: 300;
-    text-align: center;
-  }
-
   .products {
-    padding: 27px 20px 0 20px;
+    padding: 27px 10px 0 10px;
   }
 
   .products-p {
     display: block;
-    max-width: 524px;
+    max-width: 300px;
     font-size: 18px;
   }
 
-  .products-btn {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    margin: 30px 0 30px 0;
-  }
-
   .products-btn-item {
-    margin: 10px;
+    margin: 8px;
     padding: 13px 22px 10px 22px;
     min-height: 32px;
     border: none;
@@ -111,51 +128,22 @@
   }
 
   .products-list-block {
-    width: 480px;
+    width: 300px;
     min-height: 237px;
-    margin: 0 15px 15px 15px;
+    margin: 0 10px 15px 10px;
   }
 
   .products-list-img {
-    width: 480px;
-    height: 362px;
+    width: 300px;
+    height: 226px;
     display: block;
     background-color: #ccc;
-  }
-
-  .products-list-block-txt1 {
-    height: 15px;
-    display: block;
-    font-family: "raleway medium", verdana medium, sans-serif;
-    font-size: 21px;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
-    color: #c7b299;
-  }
-
-  .products-list-block-txt2 {
-    height: 14px;
-    display: block;
-    font-family: "montserrat light", verdana, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.43;
-    letter-spacing: normal;
-    text-align: left;
-    color: #d1d1d1;
-    padding-top: 14px;
   }
 
   .products-list-block:hover .products-list-btn1 {
     display: block;
     outline: none;
-    top: -200px;
+    top: -125px;
     left: 25%;
     transform: scale(2);
   }
@@ -163,15 +151,15 @@
   .products-list-block:hover .products-list-btn2 {
     display: block;
     outline: none;
-    top: -200px;
+    top: -125px;
     left: 60%;
     transform: scale(2);
   }
 
   .btn-load-more {
-    width: 200px;
-    height: 69px;
-    margin: 32px 0 35px 182px;
+    width: 188px;
+    height: 67px;
+    margin: 34px 0 35px 59px;
     padding: 12px 22px 10px 22px;
     min-height: 32px;
     border: none;
@@ -181,12 +169,8 @@
     font-size: 20px;
   }
 
-  .wrap-video {
-    display: none;
-  }
-
   .mobile {
-    width: 576px;
+    width: 320px;
     min-height: 610px;
     background-color: #fbfaf8;
     display: -webkit-box;
@@ -195,9 +179,9 @@
   }
 
   .mobile-h2 {
-    width: 408px;
+    width: 300px;
     font-family: "raleway semibold", "open sans semibold", sans-serif;
-    font-size: 30px;
+    font-size: 21px;
     font-weight: 600;
     font-stretch: normal;
     font-style: normal;
@@ -205,72 +189,23 @@
     letter-spacing: normal;
     text-align: left;
     color: #555555;
-    margin: 0 0 0 80px;
+    margin: 0 0 0 0px;
   }
 
-  .mobile-p {
-    min-width: 529px;
-    font-family: "montserrat light", verdana, sans-serif;
-    font-size: 18px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.75;
-    color: #8c8c8c;
-    margin: 29px 0px 17px 0px;
-  }
-
-  .mobile-list {
-    height: 112px;
-    width: 292px;
-    font-family: "montserrat light", verdana, sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 2;
-    letter-spacing: normal;
-    text-align: left;
-    color: #8c8c8c;
-    margin: 0px 0 0 246px;
-    padding: 2px 0 0 0;
-  }
-
-  .mobile-list-item:before {
-    content: "";
-    display: block;
-    width: 22px;
-    min-height: 22px;
-    position: absolute;
-    top: 5px;
-    left: -29px;
-    background-image: url(../img/list-marker.svg);
-    background-size: cover;
-  }
-
-  .mobile-img {
-    position: absolute;
-    margin-left: 15px;
-    margin-top: 318px;
-    display: block;
-    width: 202px;
-    height: 291px;
-  }
-
-  .progress {
+  .mobile {
     display: none;
   }
 
   .recent-posts {
     position: relative;
-    width: 576px;
+    width: 320px;
     background-color: #ffffff;
     padding: 50px 0 0 0;
     margin: 0 auto;
   }
 
   .recent-posts-p {
-    width: 576px;
+    width: 300px;
     font-family: "montserrat light", verdana, sans-serif;
     font-size: 18px;
     font-weight: 300;
@@ -283,19 +218,11 @@
     padding: 0;
     display: block;
     margin: 0 auto;
-  }
-
-  .reset-post-wrp {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-top: 25px;
+    padding: 0 10px 0 10px;
   }
 
   .recent-posts-box {
-    width: 480px;
+    width: 300px;
     min-height: 389px;
     outline: solid 1px #f8f8f8;
     margin: 15px;
@@ -303,13 +230,13 @@
 
   .recent-posts-img {
     display: block;
-    width: 481px;
-    height: 285px;
+    width: 300px;
+    height: 178px;
   }
 
   .recent-posts-title {
     font-family: "raleway medium", "open sans", sans-serif;
-    font-size: 30px;
+    font-size: 21px;
     font-weight: 500;
     font-stretch: normal;
     font-style: normal;
@@ -318,7 +245,7 @@
     text-align: left;
     color: #555555;
     display: block;
-    margin: 30px 0 0 29px;
+    margin: 30px 0 0 12px;
   }
 
   .recent-posts-txt {
@@ -331,31 +258,7 @@
     letter-spacing: normal;
     text-align: left;
     color: #8c8c8c;
-    margin: 19px 0 0 29px;
-  }
-
-  .recent-posts-a {
-    font-family: "montserrat light", verdana, sans-serif;
-    font-size: 17px;
-    font-weight: 300;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.43;
-    letter-spacing: normal;
-    text-align: left;
-    display: block;
-    margin: 27px 0 33px 29px;
-  }
-
-  .recent-posts-a::after {
-    content: "";
-    display: block;
-    position: absolute;
-    display: block;
-    float: left;
-    border: 7px solid transparent;
-    border-left: 12px solid #c7b299;
-    margin: -17px 0 0 101px;
+    margin: 19px 0 0 12px;
   }
 
   .recent-pagination {
@@ -367,41 +270,31 @@
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    margin: -24px 0 22px 186px;
+    margin: -24px 0 22px 114px;
   }
 
   .calendar {
     position: absolute;
-    margin: -262px 0 0 20px;
+    margin: -169px 0 0 11px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
   }
 
-  .recent-posts-btn {
-    fill: #d1d1d1;
-    width: 22px;
-    height: 22px;
-    display: flex;
-    justify-content: center;
-    transform: scale(2);
-    margin: 0 25px;
-  }
-
   .partners-img {
     transition: 1s;
     display: block;
     margin: 23px 38px;
-    width: 172px;
+    width: 100px;
   }
 
   .footer {
-    width: 576px;
+    width: 320px;
   }
 
   .footer2 {
-    height: 110px;
+    height: 200px;
     background-color: #111111;
     color: #555555;
     font-family: "montserrat light", verdana, sans-serif;
@@ -411,7 +304,25 @@
     font-style: normal;
     line-height: 1.54;
     letter-spacing: normal;
-    padding: 0 20px 0 20px;
+    padding: 0px 10px 0 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+  }
+
+  .copyright-left {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+  }
+
+  .copyright-right {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -424,11 +335,6 @@
   .policy::after,
   .designed::after,
   .faq::after {
-    content: " ";
-    background: #555555;
-    width: 1px;
-    height: 18px;
-    float: right;
-    margin: 4px 10px 0 10px;
+    display: none;
   }
 }
