--- a/css/media-768.css
+++ b/css/media-768.css
@@ -1,16 +1,21 @@
 @media screen and (max-width: 768px) {
   .container {
-    width: 1024px;
+    width: 768px;
     margin: 150px 0 0 0;
   }
 
   .header-block {
     position: fixed;
+    width: 768px;
     padding: 40px;
     background-image: url(../img/header.jpg);
     background-size: cover;
     z-index: 999;
     margin: -150px 0 0 0;
+  }
+
+  .header-top {
+    width: 100%;
   }
 
   .logo {
@@ -123,7 +128,7 @@
 
   .menu-ul-li {
     font-size: 26px;
-    padding-bottom: 15px;
+    padding-bottom: 22px;
   }
 
   .menu-link {
@@ -142,7 +147,7 @@
   }
 
   .mobile-menu-checkbox:checked ~ .mobile-menu-container {
-    height: 100%;
+    height: 650px;
     transition-delay: 0s;
     top: 0;
   }
@@ -174,6 +179,7 @@
     padding: 0;
     min-height: 60px;
     margin-left: -50px;
+    transform: scale(1.5);
   }
   .button-cart:active {
     fill: #c7b299;
@@ -189,6 +195,7 @@
   .search-form-img {
     width: 24px;
     height: 24px;
+    transform: scale(1.5);
   }
 
   .search-form-input {
@@ -223,6 +230,7 @@
   }
 
   .options {
+    width: 768px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -242,8 +250,8 @@
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    width: 400px;
-    padding: 10px 10px 0 10px;
+    width: 350px;
+    padding: 0 10px 0 10px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
@@ -257,52 +265,10 @@
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    width: 400px;
+    width: 350px;
     padding: 10px 10px 0 10px;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-  }
-
-  .options-block:after {
-    content: "";
-    display: block;
-    width: 70px;
-    height: 3px;
-    background-color: #f1eee9;
-  }
-  .options-block1:after {
-    content: "";
-    display: block;
-    width: 70px;
-    height: 3px;
-    background-color: #f1eee9;
-  }
-
-  .options-block:hover .options-svg {
-    fill: #c7b299;
-  }
-  .options-block1:hover .options-svg {
-    fill: #c7b299;
-  }
-
-  .options-block:hover .options-block-h2 {
-    color: #c7b299;
-  }
-  .options-block1:hover .options-block-h2 {
-    color: #c7b299;
-  }
-
-  .options-block:hover:after {
-    background-color: #c7b299;
-  }
-  .options-block1:hover:after {
-    background-color: #c7b299;
-  }
-
-  .options-svg {
-    display: block;
-    fill: #555555;
-    margin: 0 0 20px 0;
   }
 
   .options-block-h2 {
@@ -325,6 +291,273 @@
 
   .screenshot,
   .advertising {
+    display: none;
+  }
+
+  .products {
+    padding: 40px 20px 0 20px;
+  }
+
+  .products-p {
+    display: block;
+    max-width: 768px;
+  }
+
+  .products-list-block {
+    width: 300px;
+    min-height: 237px;
+    margin: 0 15px 15px 15px;
+  }
+
+  .products-list-img {
+    width: 300px;
+    height: 220px;
+    display: block;
+    background-color: #ccc;
+  }
+
+  .products-list-block:hover .products-list-btn1 {
+    display: block;
+    outline: none;
+    top: -150px;
+    left: 25%;
+    transform: scale(1.5);
+  }
+
+  .products-list-block:hover .products-list-btn2 {
+    display: block;
+    outline: none;
+    top: -150px;
+    left: 60%;
+    transform: scale(1.5);
+  }
+
+  .btn-load-more {
+    width: 170px;
+    height: 50px;
+    margin: 30px 0 35px 280px;
+    padding: 13px 22px 10px 22px;
+    min-height: 32px;
+    border: none;
+    border-radius: 3px;
+    border: solid 1px #ebebeb;
+    font-family: "raleway extrabold", "open sans extrabold", sans-serif;
+    font-size: 16px;
+  }
+
+  .wrap-video {
+    position: relative;
+    width: 768px;
+    max-height: 330px;
+  }
+
+  .video {
+    outline: none;
+    width: 768px;
+    height: 376px;
+  }
+
+  .presentation {
+    position: absolute;
+    width: 560px;
+    min-height: 390px;
+    top: 61px;
+    left: 115px;
+  }
+
+  .mobile {
+    width: 768px;
+    min-height: 610px;
+    background-color: #fbfaf8;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .mobile-img {
+    position: absolute;
+    margin-left: 15px;
+    margin-top: 250px;
+    display: block;
+    width: 202px;
+    height: 291px;
+  }
+
+  .mobile-txt {
+    display: block;
+    margin: 50px 20px 0 20px;
+    width: 768px;
+  }
+
+  .mobile-h2 {
+    width: 408px;
+    font-family: "raleway semibold", "open sans semibold", sans-serif;
+    font-size: 30px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #555555;
+    margin: 0 0 0 158px;
+  }
+
+  .mobile-p {
+    min-width: 660px;
+    font-family: "montserrat light", verdana, sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.75;
+    color: #8c8c8c;
+    margin: 29px 0px 40px 34px;
+  }
+
+  .mobile-list {
+    height: 112px;
+    width: 420px;
+    font-family: "montserrat light", verdana, sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2;
+    letter-spacing: normal;
+    text-align: left;
+    color: #8c8c8c;
+    margin: 0px 0 0 277px;
+    padding: 32px 0 0 0;
+  }
+
+  .mobile-list-item:before {
+    content: "";
+    display: block;
+    width: 25px;
+    min-height: 25px;
+    position: absolute;
+    top: 5px;
+    left: -29px;
+    background-image: url(../img/list-marker.svg);
+    background-size: cover;
+  }
+
+  .progress {
+    width: 768px;
+    height: 235px;
+    background-image: -webkit-gradient(
+      linear,
+      left bottom,
+      left top,
+      from(#211b19),
+      to(#4e3427)
+    );
+    background-image: -o-linear-gradient(bottom, #211b19, #4e3427);
+    background-image: linear-gradient(to top, #211b19, #4e3427);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  .progress-box {
+    width: 140px;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    justify-content: ;
+    margin: 0 6px 0 6px;
+  }
+
+  .progress-svg {
+    margin: 26px 0 0 46px;
+    fill: rgb(199, 178, 153);
+  }
+
+  .recent-posts {
+    position: relative;
+    width: 768px;
+    background-color: #ffffff;
+    padding: 50px 0 0 0;
+    margin: 0 auto;
+  }
+
+  .recent-posts-p {
+    width: 720px;
+    font-family: "montserrat light", verdana, sans-serif;
+    font-size: 17px;
+    font-weight: 300;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.75;
+    letter-spacing: normal;
+    text-align: center;
+    color: #8c8c8c;
+    padding: 0;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .reset-post-wrp {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+  }
+
+  .recent-posts-box {
+    width: 335px;
+    min-height: 389px;
+    outline: solid 1px #f8f8f8;
+    margin: 15px;
+  }
+
+  .recent-posts-img {
+    display: block;
+    width: 335px;
+  }
+
+  .recent-posts-btn {
+    fill: #d1d1d1;
+    width: 22px;
+    height: 22px;
+    display: flex;
+    justify-content: center;
+    transform: scale(1.5);
+    margin: 0 25px;
+  }
+
+  .partners {
+    background-image: url(../img/partners-bg.jpg);
+    min-height: 230px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+
+  .partners-img {
+    transition: 1s;
+    display: block;
+    margin: 20px;
+    width: 147px;
+  }
+
+  .footer {
+    width: 768px;
+  }
+
+  .footer1 {
     display: none;
   }
 }
