--- a/css/media-320.css
+++ b/css/media-320.css
@@ -26,7 +26,7 @@
     display: block;
     margin-left: -10px;
     margin-top: 14px;
-    padding: 0 0 0 0;
+    padding: 0;
   }
 
   .mobile-menu {
